--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 	    <li><a href="https://github.com/wwells/CUNYBridge_SQL/blob/gh-pages/FinalProject.sql" target="_blank">Final Project - NY Building Energy Type DB</a></li>
 	  </ul>
 	  <video src="test.mov" width="560" height="315" controls preload></video>
-<a id="designer-templates" class="anchor" href="#finalprojectEER" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Project EER</h3>
+
+<h3><a id="designer-templates" class="anchor" href="#finalprojectEER" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Project EER</h3>
 	  <a href ="https://github.com/wwells/CUNYBridge_SQL/blob/gh-pages/FinalEERDiagram.png"><img src="FinalEERDiagram.png" alt="EER" style="width:410px;height:545px;"></a>
 
 
