feat(site): mod page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	  <ul>
 	    <li><a href="https://github.com/wwells/CUNYBridge_SQL/blob/gh-pages/FinalProject.sql" target="_blank">Final Project - NY Building Energy Type DB</a></li>
 	  </ul>
+
+<h3><a id="designer-templates" class="anchor" href="#finalprojectex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Project Presentation</h3>
 	  <video src="test.mov" width="560" height="315" controls preload></video>
 
 <hr>
