--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  </ul>
 
 <h3><a id="designer-templates" class="anchor" href="#finalprojectex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Project Presentation</h3>
-	  <video src="test.mov" width="560" height="315" controls preload></video>
+	  <video src="SQLPresent.m4v" width="560" height="315" controls preload></video>
 
 <hr>
 <h3><a id="designer-templates" class="anchor" href="#finalprojectEER" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Final Project EER</h3>
